--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,12 @@ dist.jar=${dist.dir}/ScoutingSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.sqlite-jdbc-3.7.2.jar=C:\\Users\\John\\Dropbox\\Miscellaneous\\RoboVikings\\Scouting\\Server\\Server\\sqlite-jdbc-3.7.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${libs.Bluetooth.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=scoutingsystem.ScoutClientFrame
+main.class=scoutingsystem.ScoutFrameClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
